data/css/style.css
@charset "UTF-8";
/* style.scss */
/* reset.scss */
html {
  width: 100%;
  height: 100%; }

body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0; }

*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

/* fontfaces.scss */
@font-face {
  font-family: 'namo-font-bold';
  src: url("../fonts/font-bold-webfont.eot");
  src: url("../fonts/font-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/font-bold-webfont.woff") format("woff"), url("../fonts/font-bold-webfont.ttf") format("truetype"), url("../fonts/swift/font-bold-webfont.svg#fontbold") format("svg");
  font-weight: bold;
  font-style: normal; }
@font-face {
  font-family: 'namo-font-bold';
  src: url("../fonts/font-bold-italic-webfont.eot");
  src: url("../fonts/font-bold-italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/font-bold-italic-webfont.woff2") format("woff2"), url("../fonts/font-bold-italic-webfont.woff") format("woff"), url("../fonts/font-bold-italic-webfont.ttf") format("truetype"), url("../fonts/font-bold-italic-webfont.svg#fontbold_italic") format("svg");
  font-weight: bold;
  font-style: italic; }
/* variables.scss */
.bloc {
  display: table; }

.bloc:after {
  clear: both; }

.colonne, .colonnes {
  float: left;
  display: inline-block;
  padding: 0 2%;
  white-space: normal; }

.une {
  width: 25%; }

.deux {
  width: 50%; }

.trois {
  width: 75%; }

.quatre {
  width: 100%; }

.prefix-1 {
  margin-left: 0%; }

.prefix-2 {
  margin-left: 25%; }

.prefix-3 {
  margin-left: 50%; }

#flux_textes .bloc {
  width: 55%; }

/* general.scss */
p, li {
  word-wrap: break-word;
  hyphens: auto; }

h2 {
  margin-top: 1.5em; }

#points-de-vente h2 {
  margin-bottom: 1.5em; }

#points-de-vente li:not(:first-of-type) {
  margin-top: 1em; }

.centrer {
  text-align: center; }

#conteneur {
  display: none;
  width: 100%;
  height: 100%;
  padding: 1% 4% 4% 150px; }

#flux-textes {
  width: 100%;
  height: 100%; }

.border-bottom {
  border-bottom: 1px solid black; }

.bloc + .diaporama {
  display: none; }

.display-none {
  display: none; }

#actualités {
  transform-origin: 100% 0%;
  transform: rotate(-3deg); }

/* typographie_et_couleurs */
html {
  font: 28px/36px "namo-font-bold", sans-serif;
  color: black;
  background-color: #FFFFFF; }

a {
  color: black;
  text-decoration: none; }

a:link {
  color: black;
  text-decoration: underlined; }

.bloc a:link:after {
  content: "www";
  margin-left: 0.1em;
  vertical-align: super;
  line-height: 0;
  font-size: 0.5em; }

/*.bloc a:hover {
  color: white;
  background-color: black;
  margin: -0.1em -0.17em;
  padding: 0.1em 0.17em; }*/

/*
.bloc a:link:hover:after {
	content: "web";
}
*/

/*a.inactive {
  color: black; }*/

/*a.inactive:hover {
  color: #666; }*/

/*
a.active { color: $couleur-caracteres}
a.inactive { color: $couleur-liens-hover}
a.inactive:hover { color: $couleur-caracteres}
*/
h1, h2, h3, h4, h5, h6, #navigation {
  font: 16px/20px "namo-font-bold", sans-serif; }

h3 {
  font-style: italic; }

p.credits{
  font: 16px/20px "namo-font-bold", sans-serif;
}

/*#points-de-vente ul li:hover {
  background-color: black;
  color: white;
  margin: -0.1em -0.17em;
  padding: 0.1em 0.17em; }*/

/*#points-de-vente ul li:hover:not(:first-of-type) {
  margin: 0.9em -0.17em -0.1em -0.17em; }

#points-de-vente ul li:hover a {
  color: white; }

#points-de-vente ul li:hover a:hover {
  color: #666;
  background-color: auto; }*/

ul {
  list-style: none;
  padding: 0; }

/* navigation.scss */
#navigation {
  display: none;
  position: fixed;
  top: 0;
  left: -180px;
  left: -webkit-calc(-201px + 4%);
  left: -moz-calc(-201px + 4%);
  left: calc(-201px + 4%);
  width: 500px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -o-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg); 
  z-index: 1000000000; }

#navigation * {
  margin: 0;
  padding: 0; }

#menu {
  position: relative;
  width: 500px;
  margin: auto; }

.col:first-of-type, .col:nth-of-type(2) {
  position: absolute; }

.col:first-of-type {
  right: 0;
  top:25px;
  text-align: right; }

.col:last-of-type {
  text-align: center;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  position: relative;
  top: 0.3em;
  left: 1.25em; }

.col:nth-of-type(2) {
  left: 20px; }

#menu .contenu hr {
  width: 48px;
  margin: 0 232px;
  border: none;
  border-top: 1px solid black; }

#menu .contenu p {
  font: 22px/20px "namo-font-bold", sans-serif;
  position: relative;
  left: 0.22em; }

#menu .contenu p:first-of-type {
  bottom:12px;
  }

#menu .contenu p:nth-of-type(2) {
  top:12px;
  }

/* mediaqueries.scss */
@media screen and (min-width: 1200px) {
  #conteneur {
    width: 1200px;
    margin-left: auto;
    margin-right: auto; } }
@media screen and (max-width: 499px) {
  #conteneur {
    margin-top: -0.5em; }

  #navigation {
    display: none; }

  .bloc {
    display: block; }

  .colonne, .colonnes {
    float: none;
    display: block; }

  #informations-generales div:first-of-type {
    margin-bottom: 0.9em; }

  .une, .deux, .trois, .quatre {
    width: 100%; }

  .prefix-1, .prefix-2, .prefix-3 {
    margin-left: 0; }

  #informations-generales li p {
    margin-bottom: 0;
    padding-bottom: 1em; }

  h1, h2, h3, h4, h5, h6, li {
    text-align: center; }

  #contact, .commander {
    text-align: center; }

  #actualités * {
    text-align: left; }

  #actualités {
    border-bottom: 1px solid black; } }
@media screen and (max-height: 400px) {
  #menu {
    width: 340px; }

  /*
  	#navigation {
  		left: -250px; //fallback
  		left: -webkit-calc(-272px + 4%);
  		left: -moz-calc(-272px + 4%);
  		left: calc(-272px + 4%);
  	}
  
  
  	#menu .col:nth-of-type(2) p:nth-of-type(-n+2) {
  		display:none;
  	}
  	#menu .col:nth-of-type(2) {
  		position: relative;
  		left: -1.7em;
  		top: 1.5em;
  	}
  */ }
/*

 */

/*# sourceMappingURL=style.css.map */

.spinner {
  width: 20px;
  height: 20px;
  position: fixed;
  left: 50%;
  top: 50%;
  z-index: 100000;
}

.container1 > div, .container2 > div, .container3 > div {
  width: 6px;
  height: 6px;
  background-color: #FFFFFF;

  border-radius: 100%;
  position: absolute;
  -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
  animation: bouncedelay 1.2s infinite ease-in-out;
  /* Prevent first frame from flickering when animation starts */
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.spinner-container {
  position: absolute;
  width: 100%;
  height: 100%;
}

.container2 {
  -webkit-transform: rotateZ(45deg);
  transform: rotateZ(45deg);
}

.container3 {
  -webkit-transform: rotateZ(90deg);
  transform: rotateZ(90deg);
}

.circle1 { top: 0; left: 0; }
.circle2 { top: 0; right: 0; }
.circle3 { right: 0; bottom: 0; }
.circle4 { left: 0; bottom: 0; }

.container2 .circle1 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.container3 .circle1 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

.container1 .circle2 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.container2 .circle2 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

.container3 .circle2 {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}

.container1 .circle3 {
  -webkit-animation-delay: -0.6s;
  animation-delay: -0.6s;
}

.container2 .circle3 {
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}

.container3 .circle3 {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}

.container1 .circle4 {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.container2 .circle4 {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}

.container3 .circle4 {
  -webkit-animation-delay: -0.1s;
  animation-delay: -0.1s;
}

@-webkit-keyframes bouncedelay {
  0%, 80%, 100% { -webkit-transform: scale(0.0) }
  40% { -webkit-transform: scale(1.0) }
}

@keyframes bouncedelay {
  0%, 80%, 100% { 
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 40% { 
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
  }
}

#logo{
  position: fixed;
  width: 100%;
  height: 100%;
  background: url('../../data/img/home-background.jpg') no-repeat 50% 50%;
  color: white;
  background-size:cover;
}

#logo p{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%); 
  text-align: center; 
}

#logo a{
  color: white;
  font: 14px/18px "namo-font-bold", sans-serif;

}

#logo a#buttonHomeNext{
  position: absolute;
  bottom: 30px;
  left: 50%;
  transform: translate(-50%, 0); 
  text-align: center; 
}

#logo a#buttonHomeMore{
  position: absolute;
  bottom: 30%;
  left: 50%;
  transform: translate(-50%, 0); 
  text-align: center; 
}

#logo h1{
  position: relative;
  margin: auto;
  display: none;
  text-indent: -100000px;
  top: 50%;
  width: 120px;
  height: 30px;
  /*background: url('../../data/img/logo.png') no-repeat 50% 50%;*/
  cursor: pointer;
}

#navigation li.contact{
  padding-top:10px;
}

/*#commander div:last-child, #points-de-vente div:last-child {
  padding-bottom: 30px;
  border-bottom: 1px solid white;
}*/

#commander a, #commander a:link {
  color: white;
  font: 22px/54px "namo-font-bold", sans-serif;
}

#commander a sup{
  font: 14px/18px "namo-font-bold", sans-serif;
}

#commander ul {
  margin-left: 200px;
  margin-bottom: 0;
  position: fixed;
  bottom: 100px;
}

.popin{
  display: none;
  position: fixed;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.9);
  color: white;
  z-index: 100000000;
}

/*form.paypal-button{
  display: inline-block;
  margin-left: 15px;
}

form.paypal-button button.paypal-button{
  color: #fff;
  text-align: center;
  padding: 10px 14px;
  margin: 0;
  background: rgba(0, 0, 0, 0.0);
  border: 0;
  cursor: pointer;
  outline: none;
  font: 28px/36px "namo-font-bold", sans-serif;
}

form.paypal-button button.paypal-button:before,
form.paypal-button button.paypal-button:after{
  background: rgba(0, 0, 0, 0.0);
}*/

